# mpvshelfv2

./: components.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
src/: App.css  App.tsx  index.tsx  models.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: mpvshelf.lua
src-tauri/src/: data.rs  database.rs  error.rs  fs.rs  lib.rs  main.rs  misc.rs  mpv.rs  tray.rs
src/components/ui/: alert-dialog.tsx  alert.tsx  button.tsx  card.tsx  context-menu.tsx  image.tsx  navigation-menu.tsx  popover.tsx  sheet.tsx  skeleton.tsx  switch.tsx  tabs.tsx  textfield.tsx  toast.tsx  tooltip.tsx
src/dashboard/: dashboard.tsx
src/dashboard/components/: add-new-skeleton.tsx  folder-card-cm-context.tsx  os-folder-card.tsx  os-video-card.tsx
src/libs/: cn.ts
src/main-components/: alert.tsx  error-alert.tsx  gen-toast.tsx  generic-context-menu.tsx  navbar.tsx
src/main-components/description/: desc-util.ts  folder-desc.tsx  video-desc.tsx
src/main-components/icons/: icon-hero-eye.tsx  icon-hero-slasheye.tsx  icon-mpv.tsx  icon-type.d.ts  spinner.tsx
src/profile/: create-profile.tsx
src/routes/folder-library/: folder-card.tsx  folders-section.tsx  header.tsx  library-header.tsx  library-video-card.tsx  library-videos-section.tsx  library.tsx  video-card.tsx  video-cm.tsx  videos-section.tsx
src/routes/folder-library/folder/: folder-card.tsx  folders-section.tsx
src/routes/folder-library/header/: header-last-watched-video.tsx  header.tsx
src/routes/folder-library/video/: video-card.tsx  video-cm.tsx  videos-section.tsx
src/routes/settings/: settings.tsx
src/routes/settings/tab-sections/: data.tsx  error-card.tsx  mpv.tsx  profile.tsx
src/tauri-cmds/: get_default_user.ts  get_global_user.ts  get_os_folders_by_path.ts  get_user_by_id.ts  os_folders.ts  os_videos.ts  read_os_folder_dir.ts  show_in_folder.ts  update-user.ts  update_os_videos.ts  upsert_read_os_dir.ts  users.ts
src/tauri-cmds/mpv/: get_os_folder_by_path.ts  mpv_system_check.ts  play_video.ts
src/tauri-cmds/os_folders/: delete_os_folders.ts  get_os_folder_by_path.ts  get_os_folders.ts  get_os_folders_by_path.ts  read_os_folder_dir.ts  update_os_folders.ts  upsert_read_os_dir.ts
src/tauri-cmds/os_videos/: get_os_videos.ts  update_os_videos.ts
src/tauri-cmds/user/: get_default_user.ts  get_user_by_id.ts  update-user.ts
